1999-12-28  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Remove oldgetrlimit
	and oldsetrlimit definitions.

1999-12-27  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/gbk.c: In mapping from UCS4: don't crash for undefined
	mappings.

	* iconvdata/gb2312.h (ucs4_to_gb2312): Fix mapping of 0x0101,
	0x2312, and 0x2500..0x254b.

1999-12-17  Andreas Jaeger  <aj@suse.de>

	* stdlib/Versions: Export __cxa_atexit and __cxa_finalize.

1999-12-16  Mark Mitchell  <mark@codesourcery.com>

	* stdlib/Makefile (routines): Add cxa_atexit and cxa_finalize.
	* stdlib/exit.h (flavor): Add ef_cxa.
	(exit_function): Add cxa variant.
	* stdlib/exit.c (exit): Handle ef_cxa exit functions.
	* stdlib/cxa_atexit.c: New file.
	* stdlib/cxa_finalize.c: New file.

1999-12-27  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/gb2312.c: Update mapping of GB 0x212c from latest
	Unicode tables.

1999-12-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc32/syscalls.list: Add
	truncate64, ftruncate64, fstat64, lstat64, stat64 and mmap2.
	Remove ugetrlimit.
	* sysdeps/unix/sysv/linux/sparc/sparc32/mmap64.c: New file.

1999-12-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/fxstat64.c: Rewrite to use fstat64
	syscall if available.
	* sysdeps/unix/sysv/linux/lxstat64.c: Likewise for lstat64.
	* sysdeps/unix/sysv/linux/xstat64.c: Likewise for stat64.

1999-12-08  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/ftruncate64.c: New file.
	* sysdeps/unix/sysv/linux/truncate64.c: New file.
	* sysdeps/unix/sysv/linux/i386/mmap64.S: New file.

1999-12-26  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/powerpc/pread.c: Define __libc_* variant for
	cancelation wrapper.
	* sysdeps/unix/sysv/linux/powerpc/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pwrite64.c: Likewise.
