@@ -1,3 +1,15 @@
+1999-12-29  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* sysdeps/powerpc/dl-machine.c: Many minor formatting changes.
+	(OPCODE_LWZU): New macro.
+	(OPCODE_ADDIS_HI): New macro.
+	(OPCODE_LIS_HI): New macro.
+	(__elf_machine_runtime_setup): Change PLT code-generation scheme
+ 	for thread safety even with very large PLTs, better efficiency,
+ 	and to fix a cache-flushing bug.
+	(__elf_machine_fixup_plt): Likewise.
+	(__process_machine_rela): Don't use elf_machine_fixup_plt.
+
 1999-12-28  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Remove oldgetrlimit
